# zap

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
include/zap/: version.hpp
src/: main.cpp
src/cli/: commands.cpp  commands.hpp
src/core/: cmake_generator.cpp  cmake_generator.hpp  manifest.cpp  manifest.hpp  project.cpp  project.hpp  vcpkg_manager.cpp  vcpkg_manager.hpp
src/utils/: fs.cpp  fs.hpp  process.cpp  process.hpp
